Fix textarea visibility

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -2,6 +2,9 @@
   background-image: url('../assets/diary.png');
   background-size:100%;
   background-color: rgb(10, 27, 16);
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 100vh;
 }
 
 div {
@@ -25,6 +28,12 @@ div {
   border: none;
   font-family: Bradley Hand, cursive;
   overflow: hidden;
+  color: #000;
+  z-index: 10;
+}
+
+#input::placeholder {
+  color: rgba(0, 0, 0, 0.5);
 }
 
 #response {
@@ -40,6 +49,9 @@ div {
   border: none;
   font-family: cursive;
   overflow: hidden;
+  color: #000;
+  z-index: 10;
+  resize: none;
 }
 
 #start {
